# HoloLens2and3DSlicer-PedicleScrewPlacementPlanning

./: LICENSE  README.md
AR_Planner-3DSlicer/: AR_Planner.py  CMakeLists.txt  README.md
AR_Planner-3DSlicer/Resources/Models/: D4.5L30.stl  D4.5L35.stl  D4.5L40.stl  D4.5L45.stl  D4.5L50.stl  D4.5L55.stl  D4.5L60.stl  D5L30.stl  D5L35.stl  D5L45.stl  D5L50.stl  D5L55.stl  D5L60.stl  D6L30.stl  D6L35.stl  D6L40.stl  D6L45.stl  D6L50.stl  D6L55.stl  D6L60.stl
AR_Planner-3DSlicer/Resources/UI/: AR_Planner.ui
AR_Planner-Unity/: README.md
AR_Planner-Unity/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
AR_Planner-Unity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: APD MixedRealityHandTrackingProfile.asset  APD MixedRealityInputSystemProfile.asset  APD MixedRealitySpeechCommandsProfile.asset  APD MixedRealityToolkitConfigurationProfile.asset
AR_Planner-Unity/Assets/Prefabs/: ConnectivityButtons.prefab  ImageButtons.prefab  SpineButtons 1.prefab
AR_Planner-Unity/Assets/Resources/Materials/: Clipping_mat.mat  (+9 more)
AR_Planner-Unity/Assets/Scenes/: PedicleScrews.unity
AR_Planner-Unity/Assets/XR/: XRGeneralSettings.asset
AR_Planner-Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Desktop_Planner-3DSlicer/: CMakeLists.txt  Desktop_Planner.py  README.md
Desktop_Planner-3DSlicer/PedicleScrewPlacement_DesktopPlanner_Module/: CMakeLists.txt  PedicleScrewPlacement_DesktopPlanner_Module.py
Desktop_Planner-3DSlicer/Resources/UI/: Desktop_Planner.ui
Desktop_Planner-3DSlicer/Testing/Python/: CMakeLists.txt
(+37 files in other folders)
